# virtuoso-bridge-lite

./: .gitignore  AGENTS.md  README.md  pyproject.toml  skill_exec.py
.github/workflows/: track-traffic.yml
arxiv/: virtuoso_bridge_ieee.tex
arxiv/figures/: architecture.tex
arxiv/tables/: comparison.tex
core/: README.md  ramic_bridge.il  ramic_daemon.py
docs/: index.html
examples/: 02_schematic_rc_filter.py  03_layout_shapes.py  _timing.py
examples/01_virtuoso/ade/: 04_create_maestro.py
examples/01_virtuoso/assets/: maestro_utils.il
examples/01_virtuoso/basic/: 01_execute_skill.py  02_ciw_print.py  02_load_il.py  03_list_library_cells.py  03_load_il.py  04_list_library_cells.py  04_screenshot.py  05_harvest_library.py  06_screenshot.py  07_sanitize_on_download.py
examples/01_virtuoso/digital_import/: README.md  import_verilog.py
examples/01_virtuoso/layout/: 01_create_layout.py  02_add_polygon.py  03_add_via.py  04_multilayer_routing.py  05_bus_routing.py  06_read_layout.py  07_delete_shapes_on_layer.py  07_screenshot.py  08_clear_routing.py  09_clear_current_layout.py  10_delete_cell.py  flower.py
examples/02_spectre/: 02_cap_dc_ac.py  02_veriloga_adc_dac.py  04_strongarm_pss_pnoise.py  __init__.py  _result_io.py
scripts/: track_traffic.py
skills/optimizer/: SKILL.md
skills/spectre/: SKILL.md
skills/turbo/: SKILL.md
skills/virtuoso/: SKILL.md
skills/virtuoso/references/: ade.md  (+11 more)
src/virtuoso_bridge/: __init__.py  cli.py  env.py  models.py  wrappers.py
stats/: README.md  clones-badge.json  clones.json  views-badge.json  views.json
(+78 files in other folders)
